--- a/force-app/main/default/lwc/motosTile/motosTile.html
+++ b/force-app/main/default/lwc/motosTile/motosTile.html
@@ -8,7 +8,7 @@
         src={moto.Imagen__c}
         alt={moto.Name}
         />
-        <p  class="slds-var-p-horizontal_xx-large">{moto.Precio__c}</p>
+        <p  class="slds-var-p-horizontal_xx-large">{moto.Precio__c } €</p>
 
     </lightning-card>
 </template>
