--- a/force-app/main/default/lwc/motosTile/motosTile.html
+++ b/force-app/main/default/lwc/motosTile/motosTile.html
@@ -1,14 +1,23 @@
 <!-- sldsValidatorIgnore -->
 <template>
     <lightning-card  title= {moto.Name} icon-name="custom:custom80">
-        <lightning-button label="Ver detalles" slot="actions"></lightning-button>
+        <lightning-button label="Ver detalles" slot="actions" onclick={navigateToRecordViewPage}></lightning-button>
         <p  class="slds-var-p-horizontal_xx-large">{moto.Marca__c}</p>
         <img 
         class="moto slds-align_absolute-center slds-var-m-arround_medium"
         src={moto.Imagen__c}
         alt={moto.Name}
         />
-        <p  class="slds-var-p-horizontal_xx-large">{moto.Precio__c } €</p>
+        <p  class="slds-var-p-horizontal_xx-large ">{moto.Precio__c } €</p>
+        <div class="slds-align_absolute-center">
+        <template if:true={Japonesa}>
+            <p>Japonesa</p>
+        </template>
+        <template if:true={Europea}>
+            <p>Europea</p>
 
+        </template>
+
+    </div>
     </lightning-card>
 </template>
