--- a/force-app/main/default/lwc/motosList/motosList.html
+++ b/force-app/main/default/lwc/motosList/motosList.html
@@ -1,5 +1,8 @@
 <template>
     <div class="slds-align_absolute-center">
+        <lightning-input type="text" label="Enter some text" onchange={handleInputChange}></lightning-input>
+    </div>
+    <div class="slds-align_absolute-center">
         <div class="slds-grid slds-wrap slds-grid_align-spread" style="width: 1100px;">
     <template if:true={motos.data}>
     <template for:each={motos.data} for:item="mot">
